# Talosent

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: __init__.py  _bootstrap.py
apps/tui/: README.md  __init__.py  __main__.py  main.py
apps/web/: README.md  __init__.py  __main__.py  main.py
assets/: README.md
docs/: README.md
evals/: README.md
examples/: README.md
scripts/: README.md
src/talosent/: __init__.py  __main__.py  runtime.py
src/talosent/agent/: __init__.py  model.py
src/talosent/agent/workflows/: __init__.py  base.py  chat.py
src/talosent/cli/: __init__.py  main.py  tui.py  web.py
src/talosent/config/: __init__.py  settings.py
src/talosent/gateway/: __init__.py  base.py
src/talosent/memory/: __init__.py  session.py  store.py
src/talosent/observability/: __init__.py  logging.py
src/talosent/plugins/: __init__.py  registry.py  spec.py
src/talosent/providers/: __init__.py  factory.py  local.py  openai_compatible.py  profile.py  registry.py  runtime.py
src/talosent/skills/: __init__.py  registry.py  spec.py
src/talosent/storage/: __init__.py  backend.py
src/talosent/tools/: __init__.py  builtins.py  registry.py  spec.py
src/talosent/web/: __init__.py  __main__.py  page.py  server.py
tests/: __init__.py  _bootstrap.py
tests/e2e/: test_cli.py  test_tui.py  test_web.py
tests/integration/: test_chat_workflow.py  test_registries.py  test_runtime_bundle.py
tests/unit/: test_agent_model.py  test_core_serialization.py  test_openai_provider.py  test_settings.py
